# GCS_Car

./: .config  8devices-lima.cfg  CMakeLists.txt  Kconfig  project.uvoptx  project.uvprojx  rtconfig.h
applications/: main.c
board/: Kconfig
board/CubeMX_Config/: .mxproject  CubeMX_Config.ioc
board/CubeMX_Config/Inc/: main.h  stm32f4xx_it.h
board/CubeMX_Config/MDK-ARM/: CubeMX_Config.uvoptx  CubeMX_Config.uvprojx
board/CubeMX_Config/Src/: main.c  stm32f4xx_hal_msp.c
libraries/HAL_Drivers/drivers/: drv_pulse_encoder.c  drv_spi.h  drv_usart.c
libraries/HAL_Drivers/drivers/config/f4/: pulse_encoder_config.h
rt-thread/components/drivers/include/drivers/: dev_serial.h
rt-thread/components/drivers/serial/: dev_serial.c
rt-thread/src/: object.c
src/: rm_config.h
src/modules/: SConscript  rm_module.h
src/modules/UART/: uart.c  uart.h
src/modules/dwt/: drv_dwt.c  drv_dwt.h
src/modules/imu/: imu.h
src/modules/imu/ADIS16467/: adis16467.c  adis16467.h
src/modules/motor/: motor_def.h
src/modules/motor/DJI_motor/: dji_motor.c  dji_motor.h
src/modules/rc/dbus/: rc_dbus.c
src/task/: SConscript  rm_task.h  robot.c
src/task/chassis/: chassis_task.c  chassis_task.h
src/task/cmd/: cmd_task.c
src/task/example/: example_task.c
src/task/gimbal/: gimbal_task.c
src/task/ins/: ins_task.c
src/task/motor/: motor_task.c
src/task/shoot/: shoot_task.c
src/task/transmission/: transmission.c  transmission.h  transmission_task.c
